# AudioCLI

./: README.md  pyproject.toml  requirements.txt
audiocli/: app.py  models.py  player.py  providers.py
