[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiocli"
version = "0.1.0"
description = "Linux terminal music player with search/link playback"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "yt-dlp>=2025.1.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
spotify = ["spotipy>=2.24.0"]

[project.scripts]
audiocli = "audiocli.app:main"

[tool.setuptools]
packages = ["audiocli"]
